# compas-RV

./: .editorconfig  .gitignore  AUTHORS.md  CHANGELOG.md  README.md  compas-RV.rhproj  environment.yml  pyproject.toml  requirements.txt  rui.py  tasks.py
.github/workflows/: build.yml  pr-checks.yml  release.yml
commands/: RV.py  RV_dem_blocks.py  RV_force.py  RV_force_modify.py  RV_force_solve.py  RV_form.py  RV_form_modify.py  RV_form_solve.py  RV_pattern.py  RV_pattern_boundaries.py  RV_pattern_modify.py  RV_pattern_relax.py  RV_pattern_supports.py  RV_scene_clear.py  RV_scene_redraw.py  RV_session_export.py  RV_session_open.py  RV_session_redo.py  RV_session_save.py  RV_session_undo.py  RV_settings.py  RV_thrust_info.py  RV_thrust_modify.py  RV_tna_horizontal.py  RV_tna_vertical.py
gitbook/: README.md  SUMMARY.md
gitbook/.gitbook/assets/: 7_rhinovault_vertical_thrust.json  examples_barrel (1).3dm  examples_barrel_0.json  examples_barrel_1.json  examples_barrel_2.json  examples_barrel_3.json  examples_barrel_4.json  examples_barrel_5.json  examples_creases.3dm  examples_creases_0.json  examples_creases_1.json  examples_creases_2.json  examples_creases_3.json  examples_creases_4.json  examples_creases_5.json  examples_creases_6.json  examples_creases_7.json  examples_creases_8.json  examples_cross_vault.3dm  examples_cross_vault_0.json  examples_cross_vault_1.json  examples_cross_vault_2.json  examples_cross_vault_3.json  examples_cross_vault_4.json  examples_cross_vault_5.json  examples_cross_vault_6.json  examples_dropdowns_0.json  examples_dropdowns_1.json  examples_dropdowns_2.json  examples_dropdowns_3.json  examples_dropdowns_4.json  examples_dropdowns_5.json  examples_holes.3dm  examples_holes_0.json  examples_holes_1.json  examples_holes_2.json  examples_holes_3.json  examples_holes_4.json  examples_holes_5.json  examples_lips.3dm  (+34 more)
gitbook/additional/: citing.md  faq.md  legal.md
gitbook/additional-information/: faq.md  legal.md
gitbook/additional-information/release-notes/: 0.5.34.9081-wip.md  README.md  version-0.2.5.9042-wip.md
gitbook/background/: rhinovault.md
gitbook/examples/: cross-vault.md  fan-vault.md  pillow-vault.md
gitbook/examples/basic-design/: README.md  barrel-vault-1.md  barrel-vault-2.md  barrel-vault-3.md  barrel-vault.md  creases.md  drop-downs.md  dropdowns.md  funnel-shells.md  holes.md  (+1 more)
gitbook/introduction/: about.md  getting-started.md  tna.md  tutorial.md
gitbook/manual/: 0.-rv.md  9.-utilities.md  boundary-conditions.md  diagrams.md  equilibrium.md  fitting.md  horizontal-equilibrium.md  materialisation.md  patterns.md  settings.md  supports-1.md  supports-2.md  supports.md  user-interface.md
gitbook/next-steps/: compas-integration.md  materialization.md
gitbook/theoretical-background/: rhinovault.md  tna.md
gitbook/workshops/: calgary-2025.md  calgary2025.md
plugin/: RV.py  RV_boundary_boundaries.py  RV_boundary_openings.py  RV_boundary_supports.py  RV_clear.py  RV_force.py  RV_force_modify.py  RV_force_solve.py  RV_form.py  RV_form_modify.py  RV_form_relax.py  RV_form_smooth.py  RV_form_solve.py  RV_open.py  RV_pattern.py  RV_pattern_boundaries.py  RV_pattern_modify.py  RV_pattern_modify_edges.py  RV_pattern_modify_vertices.py  RV_pattern_openings.py  RV_pattern_relax.py  RV_pattern_supports.py  RV_redo.py  RV_redraw.py  RV_reqs_check.py  RV_reqs_install.py  RV_save.py  RV_scene_clear.py  RV_scene_redraw.py  RV_session_open.py  RV_session_redo.py  RV_session_save.py  RV_session_undo.py  RV_settings.py  RV_thrust_modify.py  RV_tna_horizontal.py  RV_tna_vertical.py  RV_undo.py  RhinoVAULT.rhproj
resources/icons/: compas-RV_toolbar.ai
resources/logos/: compas-RV_logo.ai
resources/splash/: index.html  styles.css
src/compas_rv/: __init__.py  commands.py  session.py  settings.py
(+42 files in other folders)
